2007-11-01  Marcus D. Hanwell <marcus@cryos.org>
	* libavogadro/src/engines/labelengine.cpp,
	libavogadro/src/engines/labelsettingswidget.ui: Updated the label
	engineto label atoms by residue name and number and bonds by their
	order. Feature request 1820686 and 1824338. Also added partial charge
	labelling for atoms, feature request 1824337.

2007-10-31  Marcus D. Hanwell <marcus@cryos.org>
	* libavogadro/src/engines/ribbonengine.*: Improvements to the ribbon
	code so that it caches the chain and updates it if the molecule is
	changed.

2007-10-24  Marcus D. Hanwell <marcus@cryos.org>
	* libavogadro/src/engines/ribbonengine.cpp: Improve the ribbon engine
	to render multiple chains correctly and not crash when there is no
	chain.

2007-10-24  Marcus D. Hanwell <marcus@cryos.org>
	* libavogadro/src/painter.h, libavogadro/src/glpainter.h,
	libavogadro/src/povpainter.h: Modified the drawSpline signature to use
	QVector and take a radius.

	* libavogadro/src/glpainter.cpp: Added the necessary code to draw a
	cubic spline. Uses cylinder right now - this needs improving to fix
	the discontinuities.

	* libavogadro/src/engines/ribbonengine.cpp: Find the CA atoms that
	make up the backbone of the biological structures. Then draw this back
	bone as a cubic spline tube.

2007-10-17  Marcus D. Hanwell <marcus@cryos.org>
	* libavogadro/src/engines/ribbonengine.cpp: Added routine to pick out
	the CA atoms of the residue backbone. Draw cylinders between the CA
	atoms. Next step is to draw a smoothed tube between them.

2007-08-20  Marcus D. Hanwell <marcus@cryos.org>
	* libavogadro/src/tools/glwidget.*: Added the computeClickedPrimitive/
	Atom/Bond functions to the GLWidget class as these functions have been 
	used in	several tools and are quite generic. Fixed regression with bond
	picking.
	
	* libavogadro/src/tools/manipulatetool.*,
	libavogadro/src/tools/bondcentrictool.*,
	libavogadro/src/tools/navigatetool.*: Ported to use the new 