@@ -1,3 +1,8 @@
+2007-11-02  Marcus D. Hanwell <marcus@cryos.org>
+	* libavogadro/src/glwidget.cpp: Updated the setMolecule function 
+	to call setPrimitives for each engine at the end of molecule loading,
+	should make our molecule loading more efficient.
+
 2007-11-01  Marcus D. Hanwell <marcus@cryos.org>
 	* libavogadro/src/engines/labelengine.cpp,
 	libavogadro/src/engines/labelsettingswidget.ui: Updated the label
